--- a/styles/main.css
+++ b/styles/main.css
@@ -10,8 +10,8 @@ p 	{
 	font-size: 14px;
 	font-weight: 400;
 	font-family: Arial;
-	margin-bottom: 40px
-	text-align: right;
+	margin-bottom: 40px;
+	
 }
 .podp {
 	font-size: 16;
